# nightlightd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: client.rs  config.rs  dbus.rs  main.rs  state.rs  status.rs  suspend.rs  waker.rs  x11.rs
core/: Cargo.toml
core/src/: color.rs  lib.rs  location.rs  mode.rs  solar.rs  transition.rs
docs/: ANNOUNCE.md  AUDIT.md  DOGFOOD.md  HOW-IT-WORKS.md  ISSUES.md  PRIOR-ART.md  TUI-DESIGN.md  UPSTREAM-MR.md
panel/: Cargo.toml
panel/src/: autostart.rs  curve.rs  daemon.rs  main.rs  single.rs
scripts/: screenshots.sh
tray/: Cargo.toml
tray/src/: daemon.rs  main.rs
tui/: Cargo.toml
tui/src/: autostart.rs  daemon.rs  main.rs  theme.rs  today.rs  wordmark.txt
