# The binary. Owns X11, D-Bus, and the event loop; leans on `core` for all
# pure logic.
#
# The package is named `nightlightd` so the produced binary is `nightlightd`
# (the name the daemon, the Debian package, and the Flatpak all share).
[package]
name = "nightlightd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Pure logic (colour, sun, timezone). Used from #11 onward.
nightlightd-core = { path = "../core" }
# X11 / XRandR access. Pure-Rust bindings — no C libxcb build dependency. The
# `randr` feature adds the CRTC and gamma-ramp APIs this backend needs.
x11rb = { version = "0.13", features = ["randr"] }
