# The binary. Owns X11, D-Bus, and the event loop; leans on `core` for all
# pure logic.
#
# The package is named `nightlightd` so the produced binary is `nightlightd`
# (the name the daemon, the Debian package, and the Flatpak all share).
[package]
name = "nightlightd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Pure logic (colour, sun, timezone). Used from #11 onward.
nightlightd-core = { path = "../core" }
# X11 / XRandR access. Pure-Rust bindings — no C libxcb build dependency. The
# `randr` feature adds the CRTC and gamma-ramp APIs this backend needs.
x11rb = { version = "0.13", features = ["randr"] }
# Catch SIGINT/SIGTERM so a clean exit can restore the screen (#12). Small,
# focused, and handles the async-signal-safety details for us.
signal-hook = "0.3"
# Safe `poll` (and, later, timerfd) for the event loop that watches the X11 fd
# and re-applies the ramp on RandR events (#13). Already in the tree via x11rb.
rustix = { version = "1", features = ["event"] }
# Config file parsing (#17): TOML via serde. Lives here, not in `core`, so
# `core` stays dependency-free.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# D-Bus: the daemon serves org.nightlightd.Daemon and clients call it (#18-#20).
# The blocking API keeps its reactor on its own thread so our synchronous poll
# loop is untouched.
zbus = "5"
