# The binary. Owns X11, D-Bus, and the event loop; leans on `core` for all
# pure logic.
#
# The package is named `nightlightd` so the produced binary is `nightlightd`
# (the name the daemon, the Debian package, and the Flatpak all share).
[package]
name = "nightlightd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-config screen colour temperature daemon for X11"

[dependencies]
# Pure logic (colour, sun, timezone). Used from #11 onward.
nightlightd-core = { path = "../core" }
# X11 / XRandR access. Pure-Rust bindings — no C libxcb build dependency. The
# `randr` feature adds the CRTC and gamma-ramp APIs this backend needs.
x11rb = { version = "0.13", features = ["randr"] }
# Catch SIGINT/SIGTERM so a clean exit can restore the screen (#12). Small,
# focused, and handles the async-signal-safety details for us.
signal-hook = "0.3"
# Safe `poll` (and, later, timerfd) for the event loop that watches the X11 fd
# and re-applies the ramp on RandR events (#13). Already in the tree via x11rb.
rustix = { version = "1", features = ["event"] }
# Config file parsing (#17): TOML via serde. Lives here, not in `core`, so
# `core` stays dependency-free.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# D-Bus: the daemon serves org.nightlightd.Daemon and clients call it (#18-#20).
# The blocking API keeps its reactor on its own thread so our synchronous poll
# loop is untouched.
zbus = "5"
# Command-line parsing for the one binary's two modes (#20).
clap = { version = "4", features = ["derive"] }
# Structured logging for the daemon (#22): RUST_LOG=debug is verbose, the
# default is quiet (state changes only). Already in the tree via zbus.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The .deb (#26). Bundles all three binaries plus the systemd user unit and the
# tray's autostart entry. Build the whole workspace first, then package without
# rebuilding:
#   cargo build --release --workspace
#   cargo deb -p nightlightd --no-build
# `$auto` reads the binaries' shared-library needs (the panel pulls in GL and
# X11 libraries via eframe) so apt installs them.
[package.metadata.deb]
maintainer = "Umut Dincer Yananer <umutdncr@gmail.com>"
copyright = "2026 Umut Dincer Yananer"
license-file = ["../LICENSE", "0"]
section = "x11"
priority = "optional"
# $auto covers what the linker records (libc). The panel's GL and X11 libraries
# are dlopen'd by eframe/winit at runtime, so ldd can't see them and they must
# be listed by hand or the panel won't start on a minimal install.
depends = "$auto, libgl1, libegl1, libxkbcommon0, libxkbcommon-x11-0, libx11-6, libxcursor1, libxrandr2, libxi6"
extended-description = """\
Zero-config screen colour temperature daemon for X11. Reads your timezone to \
find your location, warms the screen after sunset, refuses to run twice, and \
survives suspend. Ships a system-tray icon, a settings panel with an \
f.lux-style day/night curve, and a terminal dashboard."""
assets = [
    ["target/release/nightlightd", "usr/bin/", "755"],
    ["target/release/nightlight-tray", "usr/bin/", "755"],
    ["target/release/nightlight-panel", "usr/bin/", "755"],
    ["target/release/nightlight-tui", "usr/bin/", "755"],
    ["../dist/deb/nightlightd.service", "usr/lib/systemd/user/nightlightd.service", "644"],
    ["../dist/nightlight-tray.desktop", "etc/xdg/autostart/nightlight-tray.desktop", "644"],
    ["../README.md", "usr/share/doc/nightlightd/README.md", "644"],
]
