# The TUI client (#35): a one-screen ratatui dashboard, the showcase piece.
#
# A thin client like the tray and panel: no state, reads GetStatus over D-Bus,
# sends the same methods. Lives in its own crate so ratatui/crossterm never
# touch the daemon.
[package]
name = "nightlight-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nightlightd-core = { version = "0.1.0", path = "../core" }
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
tui-big-text = "0.8.8"
zbus = "5"
